<?xml version="1.0"?>
<package format="2">
    <name>llol</name>
    <version>0.0.0</version>
    <description>The llol package</description>

    <maintainer email="quchao@seas.upenn.edu">chao</maintainer>
    <license>SV</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf2_ros</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>

    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>

    <export>
    </export>
</package>
